--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img class="port-img" src="images/datastr.jpg" alt="placeholder">
                 <p>Practice from academic work using common data structures and algorithms. Hash tables, binary trees, graphs, min-heaps and vectors. Using algorithms like sorting and graph analysis like Dijkstra's.</p>
         </a>
-        <a href="DVDbuild.htm">
+        <a href="https://danhrubec.github.io/Portfolio/DVDBuild.htm">
        <img class="port-img" src="images/DSC_0863.JPG" alt="placeholder">
             <p>Taking an old DVD player and scrapping it and creating a custom built PC inside. On the outside it looks like a standard DVD player but has the full functionality of a normal PC.</p>
         </a>
