--- a/DVDBuild.html
+++ b/DVDBuild.html
@@ -22,18 +22,18 @@
         <ul>
             <li><a href="#" onclick="toggleSideBar()">Close</a></li>
             <li><a href="https://danhrubec.github.io/Portfolio/">Home</a></li>
-            <li><a href="index.htm#summary">About</a></li>
-            <li><a href="index.htm#portfolio">Portfolio</a></li>
-            <li><a href="index.htm#contact">Contact</a></li>
+            <li><a href="./index.html#summary">About</a></li>
+            <li><a href="./index.html#portfolio">Portfolio</a></li>
+            <li><a href="./index.html#contact">Contact</a></li>
         </ul>
     </div>
     <nav id="Top-Menu">
      <ul>
-        <li><a href="index.htm">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="mailto:hrubecdan@gmail.com">E-Mail</a></li>
-        <li><a href="index.htm#summary">Summary</a></li>
+        <li><a href="./index.html#summary">Summary</a></li>
         <li><a href="resources/Dan%20Hrubec%20-%20Resume.pdf">Resume</a></li>
-        <li><a href="index.htm#contact">Contact</a></li>
+        <li><a href="./index.html#contact">Contact</a></li>
     
     </ul>
     </nav>
