--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        <img class="port-img" src="images/DSC_0863.JPG" alt="placeholder">
             <p>Taking an old DVD player and scrapping it and creating a custom built PC inside. On the outside it looks like a standard DVD player but has the full functionality of a normal PC.</p>
         </a>
-        <a href="https://github.com/danhrubec/Sudoku-Solver>
+        <a href="https://github.com/danhrubec/Sudoku-Solver">
             <img class="port-img" src="images/sudoku.PNG" alt="placeholder">
                 <p>Project that solves a sudoku board using recursion. A GUI provided to allow the user to try and solve it themselves and showcase the recursion algorithm behind the solving the board.</p>
         </a>
